# vibraphone-template

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CURSOR_RULES.md  Justfile  README.md  pyproject.toml  vibraphone.yaml
.beads/: issues.jsonl
.github/workflows/: pr-quality-gate.yml
.mcp/: config.json
.mcp/servers/vibraphone/: __init__.py  config.py  pyproject.toml  server.py
.mcp/servers/vibraphone/tests/unit/: test_circuit_breakers.py  test_review_tools.py  test_session_recovery.py  test_stitch_integration.py
.mcp/servers/vibraphone/tools/: __init__.py  beads_tools.py  bridge_tools.py  quality_tools.py  review_tools.py  session_tools.py  stack_tools.py  worktree_tools.py
.mcp/servers/vibraphone/utils/: __init__.py  br_client.py  session.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-crawler-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md
.planning/phases/02-bubble-tea-tui/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-politeness-reliability/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-configuration-output/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-production-polish/: 05-01-PLAN.md  05-02-PLAN.md  05-03-PLAN.md  05-CONTEXT.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  CONSTITUTION.md  DECISIONS.md  GLOSSARY.md
docs/prompts/: reviewer.md
docs/specs/: _TEMPLATE.md
scripts/: add_task.py  bootstrap.sh  review.py
src/: go.mod  go.sum  main.go
src/crawler/: crawler.go  crawler_test.go  events.go  extract.go  extract_test.go  memory.go  memory_test.go  ratelimit.go  ratelimit_test.go  retry.go  retry_test.go  robots.go  robots_test.go  visited.go  visited_test.go  worker.go  worker_test.go
src/result/: errors.go  errors_test.go  output.go  output_test.go  printer.go  printer_test.go  result.go
src/tui/: messages.go  model.go  styles.go  tui_test.go
src/urlutil/: filter.go  filter_test.go  normalize.go  normalize_test.go
