[project]
name = "vibraphone-mcp"
version = "0.1.0"
description = "Vibraphone MCP server — tool-enforced development workflow"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "fastmcp>=0.1.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config.py", "server.py", "tools", "utils"]
